--- a/Src/ResizeArrayT.fsproj
+++ b/Src/ResizeArrayT.fsproj
@@ -30,19 +30,25 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
     <PackageTags>fsharp;ResizeArray;fable;fable-library</PackageTags>
 
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>logo128.png</PackageIcon>
+
+
+    <DebugType>portable</DebugType>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
-    <!-- <SymbolPackageFormat>snupkg</SymbolPackageFormat>     -->
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+
+
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <PackageIcon>logo128.png</PackageIcon>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <DebugType>embedded</DebugType>
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <RepositoryUrl>https://github.com/goswinr/ResizeArrayT</RepositoryUrl>
     <FsDocsLicenseLink>https://github.com/goswinr/ResizeArrayT/blob/main//LICENSE.md</FsDocsLicenseLink>
     <FsDocsReleaseNotesLink>https://github.com/goswinr/ResizeArrayT/blob/main/CHANGELOG.md</FsDocsReleaseNotesLink>
@@ -56,8 +62,9 @@
 
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="6.0.7" />    <!-- 6.0 for InlineIfLambda , otherwise the minimum FSharp.Core version would be forced by the SDK used for building it. this would be needlessly too high-->
-    <PackageReference Include="Ionide.KeepAChangelog.Tasks" Version="0.1.8" PrivateAssets="all"  />
+    <PackageReference Include="EasyBuild.PackageReleaseNotes.Tasks" Version="2.0.0" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <!-- <PackageReference Include="Ionide.KeepAChangelog.Tasks" Version="0.1.8" PrivateAssets="all"  /> -->
   </ItemGroup>
 
   <ItemGroup>
@@ -78,7 +85,7 @@
   </Target>
 
   <Target Name="WriteChangelogVersion" AfterTargets="AfterBuild"><!-- for version checks in github tag based builds -->
-    <WriteLinesToFile File="./bin/ChangelogVersion.txt" Lines="@(CurrentReleaseChangelog)" Overwrite="true" ContinueOnError="false" />
+    <WriteLinesToFile File="./bin/ChangelogVersion.txt" Lines="%(CurrentRelease.Version)" Overwrite="true" ContinueOnError="false" />
   </Target>
 
 </Project>
